removed moving name bg and made it stationary due to some loading/glitching (see arez's text vid) issues, changed projects spacing, TODO: revamp projects section and details sections

--- a/style.css
+++ b/style.css
@@ -223,6 +223,9 @@ nav {
 .header-text h1 {
     font-size: 80px;
     margin-bottom: 0;
+    color: inherit; /* Ensure text color is always displayed */
+    background-blend-mode: multiply; /* Blend background image with text color */
+    color: var(--dark-color);
     background-image: url('images/headerImage/textGradient.png');
     background-attachment: fixed;
     -webkit-text-fill-color: transparent;
@@ -389,6 +392,10 @@ h1, h2, h3{
     line-height: 1.3;
     margin-bottom: 2rem;
     color: var(--dark-color);
+    background-image: url('images/headerImage/textGradient.png');
+    background-attachment: fixed;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 .flex{
     display: flex;
